--- a/src/app/componentes/inventario/inventario.component.html
+++ b/src/app/componentes/inventario/inventario.component.html
@@ -9,7 +9,8 @@
     </mat-form-field>
   
     <div>
-      <button mat-raised-button (click)="openBottomSheet()" color="accent">Nuevo medicamento</button> 
+      <button mat-raised-button (click)="openBottomSheet()" color="accent">Nuevo medicamento</button>
+      <button mat-raised-button (click)="cargar()" color="primary">Cargar lista</button> 
     </div>
   
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -17,31 +18,31 @@
       <!-- Name Column -->
       <ng-container matColumnDef="Nombre">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.getNombre}} </td>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="Presentacion">
         <th mat-header-cell *matHeaderCellDef> Presentacion </th>
-        <td mat-cell *matCellDef="let element"> {{element.pres}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.getPresentacion}} </td>
       </ng-container>
   
       <!-- Symbol Column -->
       <ng-container matColumnDef="Cantidad">
         <th mat-header-cell *matHeaderCellDef> Cantidad </th>
-        <td mat-cell *matCellDef="let element"> {{element.cant}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.getCantidad}} </td>
       </ng-container>
   
       <ng-container matColumnDef="Fecha vencimiento">
         <th mat-header-cell *matHeaderCellDef> Fecha de vencimiento </th>
-        <td mat-cell *matCellDef="let element"> {{element.fven |date: "MM/dd/yyyy"}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.getVencimiento.toDate()  | date: "MM/yyyy"}} </td>
       </ng-container>
   
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>   
         <td mat-cell *matCellDef="let element"> 
-          <button mat-raised-button (click)="editMed(element.ID)" color="primary">Editar</button> 
-          <button mat-raised-button color="warn">Retirar</button> 
+          <button mat-raised-button (click)="editMed(element.getNombre)" color="primary">Editar</button> 
+          <button mat-raised-button color="warn" (click)="retirarMedicamento(element.getNombre)">Retirar</button> 
         </td>
       </ng-container>
   
