--- a/src/app/componentes/consultar-historial/consultar-historial.component.html
+++ b/src/app/componentes/consultar-historial/consultar-historial.component.html
@@ -8,7 +8,7 @@
 
  
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar estudiante">
+      <input matInput (keyup)="applyFilterEstudiante($event.target.value)" placeholder="Buscar estudiante">
     </mat-form-field>
 
     <div class="mat-elevation-z8">
