--- a/src/app/componentes/atender/atender.component.css
+++ b/src/app/componentes/atender/atender.component.css
@@ -8,7 +8,7 @@ mat-grid-tile {
 }    
  
 .example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-image: url('https://svgsilh.com/svg_v2/34914-e91e63.svg');
   background-size: cover;
 }
 
