--- a/src/app/menu-principal/menu-principal.component.html
+++ b/src/app/menu-principal/menu-principal.component.html
@@ -5,7 +5,10 @@
       [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/login">Login</a>
+      
+      <div *ngIf="banderaL">
+          <a mat-list-item routerLink="/login">Login</a>
+        </div>
       <div *ngIf="(authS.user | async)">
         <a mat-list-item routerLink="/home">Home</a>
       </div>
